add vtt resources, check textTracks length

--- a/html/semantics/embedded-content/media-elements/track/track-element/track-api-texttracks.html
+++ b/html/semantics/embedded-content/media-elements/track/track-element/track-api-texttracks.html
@@ -9,12 +9,12 @@
 </head>
 <body>
 <h1>Track element and API Test</h1>
-<div style="display:none">
-	<video id="tracktest" src="brave.webm">
-		<track kind=subtitles src=brave.en.vtt srclang=en label="English">
-		<track kind=captions src=brave.en.vtt srclang=en label="English for the Hard of Hearing">
-		<track id="french" kind=subtitles src=brave.fr.vtt srclang=fr label="Français">
-		<track kind=subtitles src=brave.de.vtt srclang=de label="Deutsch">
+<div style="display:none;">
+	<video id="tracktest" src="/media/movie_300.mp4">
+		<track kind=subtitles src=resoures/track.en.vtt srclang=en label="English">
+		<track kind=captions src=resoures/track.en.vtt srclang=en label="English for the Hard of Hearing">
+		<track id="french" kind=subtitles src=resoures/track.fr.vtt srclang=fr label="Francais">
+		<track kind=subtitles src=resoures/track.de.vtt srclang=de label="Deutsch">
 	</video>
 </div>
 <div id="log"></div>
@@ -27,6 +27,10 @@ test(function() {
 	var t2 = document.getElementById('tracktest').textTracks.getTrackById("french");
 	assert_not_equals(t2, undefined, "textTracks member should not be undefined");
 }, "Check getTrackById method");
+test(function() {
+	var t3 = document.getElementById('tracktest').textTracks.length;
+	assert_equals(t3, 4, "textTracks List should be 4");
+}, "Count track list");
 </script>
 </body>
 </html>
