Make title shorter

--- a/custom-elements/instantiating-custom-elements/custom-tags-instantiation-test.html
+++ b/custom-elements/instantiating-custom-elements/custom-tags-instantiation-test.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>As the local name of the custom element. These types of custom element types are called custom tags.</title>
+<title>Custom tags instantiation</title>
 <meta name="author" title="Bon-Yong Lee" href="mailto:bylee78@gmail.com">
 <meta name="assert" content="As the local name of the custom element. These types of custom element types are called custom tags.">
 <link rel="help" href="http://www.w3.org/TR/custom-elements/#instantiating-custom-elements">
