--- a/html/semantics/embedded-content/media-elements/track/track-element/track-api-texttracks.html
+++ b/html/semantics/embedded-content/media-elements/track/track-element/track-api-texttracks.html
@@ -11,10 +11,10 @@
 <h1>Track element and API Test</h1>
 <div style="display:none;">
 	<video id="tracktest" src="/media/movie_300.mp4">
-		<track kind=subtitles src=resoures/track.en.vtt srclang=en label="English">
-		<track kind=captions src=resoures/track.en.vtt srclang=en label="English for the Hard of Hearing">
-		<track id="french" kind=subtitles src=resoures/track.fr.vtt srclang=fr label="Francais">
-		<track kind=subtitles src=resoures/track.de.vtt srclang=de label="Deutsch">
+		<track kind=subtitles src=resources/track.en.vtt srclang=en label="English">
+		<track kind=captions src=resources/track.en.vtt srclang=en label="English for the Hard of Hearing">
+		<track id="french" kind=subtitles src=resources/track.fr.vtt srclang=fr label="Francais">
+		<track kind=subtitles src=resources/track.de.vtt srclang=de label="Deutsch">
 	</video>
 </div>
 <div id="log"></div>
