Make title shorter

--- a/custom-elements/instantiating-custom-elements/type-extensions-instantiation-test.html
+++ b/custom-elements/instantiating-custom-elements/type-extensions-instantiation-test.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>As the value of the is attribute of the custom element. custom element types given this way are called type extensions.</title>
+<title>Type extension instantiation</title>
 <meta name="author" title="Bon-Yong Lee" href="mailto:bylee78@gmail.com">
 <meta name="assert" content="As the value of the is attribute of the custom element. custom element types given this way are called type extensions.">
 <link rel="help" href="http://www.w3.org/TR/custom-elements/#instantiating-custom-elements">
