Make title shorter

--- a/custom-elements/instantiating-custom-elements/unchanged-attribute.html
+++ b/custom-elements/instantiating-custom-elements/unchanged-attribute.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>After a custom element is instantiated, changing the value of the is attribute must not affect this element's custom element type.</title>
+<title>Custom element's type is immutable.</title>
 <meta name="author" title="Bon-Yong Lee" href="mailto:bylee78@gmail.com">
 <meta name="assert" content="After a custom element is instantiated, changing the value of the is attribute must not affect this element's custom element type.">
 <link rel="help" href="http://www.w3.org/TR/custom-elements/#instantiating-custom-elements">
