--- a/custom-elements/instantiating-custom-elements/custom-tags-wins-type-extensions.html
+++ b/custom-elements/instantiating-custom-elements/custom-tags-wins-type-extensions.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>When an HTML Document is loaded in a browsing context, a new registry must be created and associated with this document</title>
+<title>A custom tag prior to a type extension</title>
 <meta name="author" title="Bon-Yong Lee" href="mailto:bylee78@gmail.com">
 <meta name="assert" content="If both types of custom element types are provided at the time of element's instantiation, the custom tag must win over the type extension.">
 <link rel="help" href="http://www.w3.org/TR/custom-elements/#instantiating-custom-elements">
