--- a/shadow-dom/elements-and-dom-objects/shadowroot-object/shadowroot-attributes/confirm-olderShadowRoot-is-readonly.html
+++ b/shadow-dom/elements-and-dom-objects/shadowroot-object/shadowroot-attributes/confirm-olderShadowRoot-is-readonly.html
@@ -13,7 +13,7 @@ policies and contribution forms [3].
 <title>Shadow DOM Test: Shadow root olderShadowRoot attribute must be readonly</title>
 <link rel="author" title="Masaya Iseki" href="mailto:iseki.m.aa@gmail.com">
 <link rel="help" href="http://www.w3.org/TR/2013/WD-shadow-dom-20130514/#shadow-root-attributes">
-<meta name="assert" content="ShadowRoot Object: Confirm olderShadowRoot of type Element is readonly">
+<meta name="assert" content="ShadowRoot Object: Confirm olderShadowRoot attribute is readonly">
 <script src="/resources/testharness.js"></script>
 <script src="/resources/testharnessreport.js"></script>
 <script src="../../../testcommon.js"></script>
