change Audio File
change existed Audio File

--- a/html/semantics/embedded-content/media-elements/track/track-element/src-addcue-removecue.html
+++ b/html/semantics/embedded-content/media-elements/track/track-element/src-addcue-removecue.html
@@ -11,7 +11,7 @@
 <h1>Media sample</h1>
 <div id="log"></div>
 <script>
-var sfx = new Audio('sfx.wav');
+var sfx = new Audio('/media/sound_5.mp3');
 var sounds
 var cue
 
