Fix link for help

--- a/custom-elements/custom-element-lifecycle/types-of-callbacks/detached-callback-test.html
+++ b/custom-elements/custom-element-lifecycle/types-of-callbacks/detached-callback-test.html
@@ -4,7 +4,7 @@
 <title>Detached callback of a custom element should be called </title>
 <meta name="author" title="Bon-Yong Lee" href="mailto:bylee78@gmail.com">
 <meta name="assert" content="detached callback ... must be enqueued whenever custom element is removed from the document and this document has a browsing context.">
-<link rel="help" href="http://www.w3.org/TR/custom-elements/#types-of-callbacks">
+<link rel="help" href="http://w3c.github.io/webcomponents/spec/custom/#types-of-callbacks">
 <script src="/resources/testharness.js"></script>
 <script src="/resources/testharnessreport.js"></script>
 <script src="../../testcommon.js"></script>
