remove vender pre-fix

--- a/contributors/ttwf_tokyo/snsk/submitted/text-emphasis-style-021.html
+++ b/contributors/ttwf_tokyo/snsk/submitted/text-emphasis-style-021.html
@@ -9,7 +9,7 @@
                 <meta name="assert" content="This test checks 'text-emphasis-style:string'.">
                 <style>
                         span {
-                        -webkit-text-emphasis-style: '^';
+                        text-emphasis-style: '^';
                         }
                 </style>        
         </head>
