--- a/html/semantics/embedded-content/the-object-element/object-fallback.html
+++ b/html/semantics/embedded-content/the-object-element/object-fallback.html
@@ -2,10 +2,38 @@
 <meta charset="utf-8">
 <title>HTML Test: display fallback content</title>
 <link rel="author" title="Intel" href="http://www.intel.com">
-<link rel="match" content="object-fallback-ref.html" >
-<meta name="assert" content="The object element will not display when its type
-attribute does not match the source specified by the data attribute">
-<p>Test passes if there is <strong>no blue</strong>, and 'PASS' is displayed.</p>
-<object data="/images/blue.png" type="text/plain" typemustmatch>
-<p>PASS</p>
-</object>
+<script src="/resources/testharness.js"></script>
+<script src="/resources/testharnessreport.js"></script>
+<script>
+
+var t1 = async_test("the typemustmatch attribute is specified");
+var t2 = async_test("the typemustmatch attribute is not specified");
+
+</script>
+<body onload="t1.done(); t2.done()">
+<object id="obj"></object>
+<div id="log"></div>
+<script>
+
+setup(function () {
+  var obj1 = document.createElement("object");
+  obj1.setAttribute("data", "/images/blue.png");
+  obj1.setAttribute("type", "text/plain");
+  obj1.setAttribute("typemustmatch", "true");
+  obj1.onload = t1.step_func(function () {
+    assert_true("typeMustMatch" in obj1, "typeMustMatch is not supported.");
+    assert_unreached("The image of the first object should not be loaded.");
+  });
+  document.getElementById("obj").appendChild(obj1);
+
+  var obj2 = document.createElement("object");
+  obj2.setAttribute("data", "test2.html");
+  obj2.setAttribute("type", "text/plain");
+  obj2.onload = t2.step_func( function () {
+    assert_not_equals(obj2.contentDocument.location.href.indexOf("/test2.html"), -1, "The test2.html should be loaded.");
+  });
+  document.getElementById("obj").appendChild(obj2);
+});
+
+</script>
+</body>
