--- a/html/semantics/selectors/pseudo-classes/valid-invalid.html
+++ b/html/semantics/selectors/pseudo-classes/valid-invalid.html
@@ -7,15 +7,19 @@
 <script src="/resources/testharnessreport.js"></script>
 <script src="utils.js"></script>
 <div id="log"></div>
-<div id='simpleTextConstraints'>
+<div id='simpleConstraints'>
   <input type=text id=text1 value="foobar" required>
   <input type=text id=text2 required>
+</div>
+<div id='FormSelection'>
   <form id=form1>
     <input type=text id=text3 value="foobar" required>
   </form>
   <form id=form2>
     <input type=text id=text4 required>
   </form>
+</div>
+<div id='FieldSetSelection'>
   <fieldset id=fieldset1>
     <input type=text id=text5 value="foobar" required>
   </fieldset>
@@ -33,18 +37,26 @@
 </div>
 
 <script>
-  testSelector("#simpleTextConstraints :valid", ["text1", "form1", "text3", "fieldset1", "text5"], "':valid' matches elements that satisfy their simple text constraints, <form>s/<fieldset>s with descendants that satisfy their constraints");
+  testSelector("#simpleConstraints :valid", ["text1"], "':valid' matches elements that satisfy their constraints");
 
-  testSelector("#patternConstraints :valid", [ "text8" ], "':valid' matches elements that satisfy their pattern constraints, <form>s/<fieldset>s with descendants that satisfy their constraints");
+  testSelector("#FormSelection :valid", ["form1", "text3"], "':valid' matches form elements that are not the form owner of any elements that themselves are candidates for constraint validation but do not satisfy their constraints");
 
-  testSelector("#numberConstraints :valid", [ "number2" ], "':valid' matches elements that satisfy their number constraints, <form>s/<fieldset>s with descendants that satisfy their constraints");
+  testSelector("#FieldSetSelection :valid", ["fieldset1", "text5"], "':valid' matches fieldset elements that have no descendant elements that themselves are candidates for constraint validation but do not satisfy their constraints");
+
+  testSelector("#patternConstraints :valid", [ "text8" ], "':valid' matches elements that satisfy their pattern constraints");
+
+  testSelector("#numberConstraints :valid", [ "number2" ], "':valid' matches elements that satisfy their number constraints");
 
 
-  testSelector("#simpleTextConstraints :invalid", ["text2", "form2", "text4", "fieldset2", "text6"], "':invalid' matches elements that do not satisfy their simple text  constraints, <form>s/<fieldset>s with descendants that do not satisfy their constraints");
+  testSelector("#simpleConstraints :invalid", ["text2"], "':invalid' matches elements that do not satisfy their simple text  constraints");
 
-  testSelector("#patternConstraints :invalid", ["text7"], "':invalid' matches elements that do not satisfy their pattern constraints, <form>s/<fieldset>s with descendants that do not satisfy their constraints");
+  testSelector("#FormSelection :invalid", ["form2", "text4"], "':invalid' matches form elements that are the form owner of one or more elements that themselves are candidates for constraint validation but do not satisfy their constraints");
 
-  testSelector("#numberConstraints :invalid", ["number1"], "':invalid' matches elements that do not satisfy their number constraints, <form>s/<fieldset>s with descendants that do not satisfy their constraints");
+  testSelector("#FieldSetSelection :invalid", ["fieldset2", "text6"], "':invalid' matches fieldset elements that have of one or more descendant elements that themselves are candidates for constraint validation but do not satisfy their constraints");
+
+  testSelector("#patternConstraints :invalid", ["text7"], "':invalid' matches elements that do not satisfy their pattern constraints");
+
+  testSelector("#numberConstraints :invalid", ["number1"], "':invalid' matches elements that do not satisfy their number constraints");
 
   document.getElementById("text7").value="0BBB";
   testSelector("#patternConstraints :valid", [ "text7", "text8" ], "':valid' matches new elements that satisfy their constraints");
